# AlgEdu

./: .gitignore  .gitlab-ci.yml  README.md
AlgEdu_Desktop/AlgEdu_Dekstop/: AlgEdu_Dekstop.sln
AlgEdu_Desktop/AlgEdu_Dekstop/AlgEdu_Dekstop/: AlgEdu_Dekstop.vcxproj  AlgEdu_Dekstop.vcxproj.filters  imgui.ini
AlgEdu_Desktop/AlgEdu_Dekstop/AlgEdu_Dekstop/source/: main.cpp
AlgEdu_Team/: README.md
AlgEdu_Team/AlgEdu_Team/: settings.py  urls.py  wsgi.py
AlgEdu_Team/main_app/: models.py  views.py
AlgEdu_Team/main_app/templates/: 404.html  base.html  footer.html  profile.html  register.html
application/: .gitignore  CMakeLists.txt  README.md  application.sln  grammar.ebnf
application/desktop/: desktop.vcxproj  desktop.vcxproj.filters  grammar.ebnf  grammat.txt  imgui.ini
application/desktop/include/: baseStatement.h  baseVariable.h  cell.h  cellCord.h  commandType.h  frameContext.h  gridCommand.h  integer.h  parser.h  standardStatements.h  string.h  token.h
application/desktop/source/: assignment.cpp  assignment.h  baseStatement.cpp  baseStatement.h  baseVariable.cpp  baseVariable.h  cell.cpp  cellCord.cpp  declaration.cpp  declaration.h  emitter.h  field.cpp  field.h  frameContext.cpp  gridCommand.cpp  integer.cpp  integer.h  lexer.cpp  lexer.h  lib.h  main.cpp  parser.cpp  parser.h  standardStatements.h  statement.cpp  statement.h  string.cpp  string.h  token.cpp  token.h  tokenType.h  variable.cpp  variable.h  variable_test.cpp
application/tests/: test.cpp  tests.vcxproj  variable_test.cpp
application_website/: README.md
team_website/: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
team_website/AlgEdu_Team/: asgi.py  settings.py  urls.py
team_website/docs/: modules.rst
team_website/docs/source/: conf.py  index.rst  main_app.migrations.rst  main_app.rst
team_website/main_app/: admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  views.py
team_website/main_app/migrations/: 0001_initial.py  0002_alter_comment_options_alter_field_options_and_more.py  0002_post.py  0003_field_favorites_field_likes.py  0003_remove_reportcomment_comment_and_more.py  0004_field_coordinates.py  0005_card.py  0006_remove_field_coordinates_alter_field_favorites_and_more.py  0007_alter_comment_options_rename_user_comment_author_and_more.py  0007_fieldreport_delete_reportfield.py  0008_comment_likes_comment_reports.py  0008_merge_20250403_0356.py  0008_merge_20250412_1709.py  0009_alter_comment_options_alter_field_options_and_more.py  0009_field_cols_field_rows_wall_cell.py  0010_alter_field_options.py  0010_profilecomment.py  0011_user_avatar_alter_user_bio_alter_user_location_and_more.py  0012_profilecomment.py  0013_fieldfile_field_file.py  0014_merge_20250413_2329.py  0015_comment_is_blocked.py
team_website/main_app/templates/: 404.html  Card.html  about.html  base.html  card_detail.html  create_field.html  documentation.html  editing.html  footer.html  goals.html  header.html  index.html  login.html  post_detail.html  profile.html  register.html  report_field.html  spinning_image.html  style.css
team_website/main_app/templates/admin/: moderation_panel.html
team_website/main_app/templates/moderation/: moderation_panel.html  panel.html  resolve_field.html
team_website/static/js/: profile_fields.js  search.js
